# LifeGame

./: .gitignore  Makefile  README.md  pyproject.toml  setup.py
doc/: client_doc.md  document.md  server_doc.md
sample/: greed_player.py  manual_player.py  minimax_ab_player.py  minimax_player.py  montecarlo_player.py  random_player.py  server.py
src/lifegame_py/: __init__.py  display.py  field.py  player_base.py  protocol.py  server.py
tests/: test_client.py  test_field.py  test_player.py
